tui/src/snapshots/ody_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
╭──────────────────────────────────────────────────────────────────────────────╮
│                         ██                   ██                              │
│                         ████      ███      ████                              │
│                          ████     ███     ████                               │
│                           █████          ████                                │
│                              █████    █████                                  │
│                                 ████████                                     │
│                                   ████                                       │
│                                   ████                                       │
│                                   ████                                       │
│                                   ████                                       │
│                                                                              │
│ Welcome to ODY Code!                                                         │
│                                                                              │
│ model:     gpt-test high                                    /model to change │
│ version:   v<VERSION>                                                        │
│ directory: /tmp/project                                                      │
╰──────────────────────────────────────────────────────────────────────────────╯
