tui/src/snapshots/ody_tui__app__tests__clear_ui_header_fast_status_fast_capable_models.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
╭──────────────────────────────────────────────────────────────────────────────╮
│                         ██                   ██                              │
│                         ████      ███      ████                              │
│                          ████     ███     ████                               │
│                           █████          ████                                │
│                              █████    █████                                  │
│                                 ████████                                     │
│                                   ████                                       │
│                                   ████                                       │
│                                   ████                                       │
│                                   ████                                       │
│                                                                              │
│ Welcome to ODY Code!                                                         │
│                                                                              │
│ model:     k3 xhigh   fast                                  /model to change │
│ version:   v<VERSION>                                                        │
│ directory: /tmp/project                                                      │
╰──────────────────────────────────────────────────────────────────────────────╯
